Fixed Spacing Issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -145,3 +145,7 @@ h2 {
     left: 5px;
     top: -15px;
 }
+
+.nameAlign {
+    padding-left: 35px;
+}
